Tue Jan 30 11:35:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Countdown_Time.{h,cpp}:
          Readded destructor, missed that it updates the max_wait_time
          passed to the constructor

Tue Jan 30 10:44:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/wrapper_macros.GNU:
          When pipes is set to 1, also add -pipe to the CCFLAGS

        * include/makeinclude/platform_rtems.x_g++.GNU:
          Set pipes to 1, set DCCFLAGS

Tue Jan 30 10:14:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Unbounded_Set.cpp:
          Initialise pointer with 0.

        * ace/OS_NS_unistd.inl (getpagesize):
        * ace/config-rtems.h:
          RTEMS does define _SC_PAGESIZE, but using sysconf with _SC_PAGESIZE
          results in -1. Added a new define ACE_HAS_BROKEN_SC_PAGESIZE to be
          able to disable the usage of sysconf (_SC_PAGESIZE) for rtems 4.6,
          the ::getpagesize() function returns a correct value.

Tue Jan 30 09:46:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OS_Test.cpp:
          Added a test for ACE_OS::getpagesize(), it should return a value
          bigger then 0 else the memory pools don't work

Tue Jan 30 00:25:00 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/config-hpux-11.00.h: If the user sets RWSTD_NO_NAMESPACE to
          keep a lot of the standard C++ library out of the std namespace,
          avoid setting ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB, and also
          hoist everything else from std into the global namespace. This is
          necessary because RW wasn't consistent with using their internal
          _RWSTD_NO_NAMESPACE and the user-settable RWSTD_NO_NAMESPACE and
          some things end up in std and some not; so get the ones that ended
          up in std out to global with the rest of them.

Mon Jan 29 19:48:14 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Based_Pointer_Repository.cpp: